Do not allow an invalid parent to be set in profiles

There are numerous crashes that come from this.

BUG: 467790